fix alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,13 +24,13 @@
   text-decoration: none;
   font-size: 17px;
   color:#777777; 
-
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
 /* Display Name on the header */
 .nameHeader {
     display:inline-block;  
-    padding-left: 16%;
+    padding-left: 14.5%;
   
     padding-bottom: 0%; 
    
@@ -115,4 +115,5 @@ h2 {
 
 h1 {
     color:white;
+
 }
